gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/protection/subpkg/test2.d
version https://git-lfs.github.com/spec/v1
oid sha256:96eaf116d5930ad5541722606fd767756a44417e7e994d360fec90e59c154794
size 74
